# SuperClaw

./: .gitignore  CHANGELOG.md  CODE_STYLE_ANALYSIS.md  CONTEXT_CACHE_PLAN.md  DECLARATIVE_COMPARISON.md  DECLARATIVE_REFACTOR.md  GITHUB_PUSH_GUIDE.md  POWERSHELL_UTF8_FIX.md  README.md  REFACTOR_PLAN.md  REFACTOR_REPORT.md  STATIC_ANALYSIS.md  STATIC_ANALYSIS_DEEP.md  STATIC_ANALYSIS_ROUND3.md  TEST_REPORT.md  UPGRADE_PLAN.md  VERSION.md  _check.cjs  build.ps1  build.sh  electron-builder.yml  electron.vite.config.ts  index.html  installer.nsi  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
openclaw-dist/: CHANGELOG.md  package-lock.json  package.json
scripts/: prune-openclaw.mjs  version.ps1
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: gateway.rs  log.rs  main.rs  tray.rs
src/components/: AppDialog.vue  AttachmentPreview.vue  MarkdownRenderer.vue
src/composables/: useAttachments.ts  useGatewayData.ts  useRealtimeChat.ts
src/lib/: config.ts  gateway.ts  types.ts  utils.ts  websocket.ts
src/main/: index.ts  logger.ts  store.ts  updater.ts
src/main/config/: gateway.config.ts  (+1 more)
src/preload/: index.ts
src/renderer/: index.html
src/router/: index.ts
src/stores/: agent.ts  chat.ts  cron.ts  gateway.ts  provider.ts  skill.ts  usage.ts
src/views/: Agents.vue  Approvals.vue  Artifacts.vue  Chat.vue  Cron.vue  Devices.vue  Diagnostics.vue  Environments.vue  Home.vue  Models.vue  PushNotifications.vue  Secrets.vue  Settings.vue  Voice.vue
(+39 files in other folders)
